_sass/header.scss
.header-home {
    min-height: 100vh;
    background-color: transparent;
}

.header-page {
    min-height: 700px;
    background-color: transparent;
}

.navbar {

    .nav-item {
        font-size: $font-size-lg;

        .underline {
            position: relative;
            top: -6px;
            background-color: #fff;
            height: 2px;
            width: 0;
            transition: width 0.4s;
        }

        &.active .underline {
            width: 100px;
        }
    }
}

@include media-breakpoint-up(lg) {

    .header-home,
    .header-page {
        margin-bottom: 100px;
    }

    .navbar {    
        .nav-item {
            .underline {
                margin: auto;
            }
    
            &:hover .underline,
            &:active .underline,
            &.active .underline {
                width: 80%;
            }
        }
    }
}

